--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 				<ul>
 					<li class="fragment">Backend => <span class="fragment">Frontend =></span> <span class="fragment">Management 🤔</span>
 					</li>
-					<li class="fragment">Director of Development 🇨🇿</li>
 					<li class="fragment">Web, Dart and Flutter GDE <img src="img/experts-logo.png"
 																															style="vertical-align: middle; height: 1.3em;">
 					</li>
+					<li class="fragment">Director of Development 🇨🇿</li>
 				</ul>
 			</section>
 			<section data-background="img/disaster.jpg"></section>
@@ -158,6 +158,7 @@ sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">12<
 			<section data-background="img/title.png"></section>
 		</section>
 		<section>
+			<section><img src="img/wrike-logo.png" style="height: 150px;"></section>
 			<section data-background="img/wrike-old.png"></section>
 			<section data-background="img/wrike-old-blur.png" data-background-color="white">
 				<ul style="color: #000; font-size: 1.5em">
@@ -167,6 +168,14 @@ sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">12<
 				</ul>
 			</section>
 			<section data-background="img/wrike-new.png"></section>
+			<section data-background="#191919" data-fullscreen class="about-js">
+				<pre><code data-trim data-noescape class="javascript">
+function isDeleted(userJson) {
+  const user = JSON.parse(userJson);
+  return user["ID"] === 0; <span class="fragment">// "deleted_1234567"</span>
+}
+						</code></pre>
+			</section>
 		</section>
 		<section>
 			<img src="img/wrike+dart.png" style="height: 150px;">
@@ -198,49 +207,27 @@ sizeof(XPositionSensorData) == <span class="fragment" style="font-size: 2em">12<
 			<section data-background="img/table/2-js-hype.png"></section>
 			<section data-background="img/table/3-ts-hype.png"></section>
 			<section data-background="img/table/4-dart-type-system.png"></section>
-			<section data-background="#191919" data-fullscreen class="about-js">
-				<pre><code data-trim data-noescape class="javascript">
-function isDeleted(userJson) {
-  const user = JSON.parse(userJson);
-  return user["ID"] === 0; <span class="fragment">// "deleted_1234567"</span>
-}
-						</code></pre>
-			</section>
 			<section>
 				<h3>Dart typesystem</h3>
 				<ul>
 					<li>Strong 💪</li>
-					<li>Sound 🔊</li>
+					<li>Sound 🧱</li>
 					<li>Persist at runtime 🏃‍♂️</li>
 				</ul>
 			</section>
 			<section data-background="#191919" data-fullscreen class="about-dart">
 				<pre><code data-trim data-noescape class="Dart" style="font-size: 1.9em; line-height: 1.4em;">
-class User {  }
+<span class="fragment code-highlight current-visible" data-fragment-index="0">class Animal {  }</span>
 
-class Admin extends User {  }
+<span class="fragment code-highlight current-visible" data-fragment-index="1">class Cat extends Animal {  }</span>
 
-class DeletedUser extends User {  }
-
-void main() {
-  List&lt;Admin&gt; foo = &lt;dynamic&gt;[DeletedUser()]; // Error
-  List&lt;dynamic&gt; bar = &lt;dynamic&gt;[Admin(), DeletedUser()]; // OK
-}
-						</code></pre>
-			</section>
-			<section data-background="#191919" data-fullscreen class="about-dart">
-				<h3>Runtime checks</h3>
-				<pre><code data-trim data-noescape class="Dart">
-class User {  }
-
-class Admin extends User {  }
-
-class DeletedUser extends User {  }
-
-void main() {
-  List&lt;User&gt; users = [Admin()];
-  List&lt;DeletedUser&gt; deleted = users;
-}
+<span class="fragment code-highlight current-visible" data-fragment-index="2">class Dog extends Animal {  }</span>
+<span class="fragment code-highlight current-visible" data-fragment-index="3">
+void main() {</span>
+  <span class="fragment code-highlight current-visible" data-fragment-index="4">List&lt;Cat&gt; cats = &lt;dynamic&gt;[Dog()]; // Error</span>
+  <span class="fragment code-highlight current-visible" data-fragment-index="5">List&lt;Animal&gt; animals = [Cat()];</span>
+  <span class="fragment code-highlight current-visible" data-fragment-index="6">List&lt;Dog&gt; dogs = animals; // Runtime error</span>
+<span class="fragment code-highlight current-visible" data-fragment-index="3">}</span>
 						</code></pre>
 			</section>
 			<section><h3>nominal vs structural</h3></section>
