--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@ class Cat {
 				<div><h1><span class="capital">W</span>hat</h1></div>
 			</div>
 		</section>
+		<section><h2>Restaurant paradox</h2></section>
 		<section data-fullscreen>
 			<div class="restaurants"><img src="img/angular_restaurant.png" class="fragment"><img
 							src="img/react_restaurant.png"
