--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
 <div class="reveal">
 	<div class="slides">
 		<section>
+			<section>
+				<p>
+				<h3>Evgeny Kot<span style="font-size: 70px; margin-bottom: 20px">-</span>
+					5 years with Dart
+				</h3>
+				<ul class="instructions">
+					<li><span class="hint">HINT #1:</span> wait until "Loading" disappears</li>
+					<li><span class="hint">HINT #2:</span> ESC - structure; SPACE, →↓←↑ - move next</li>
+					<li><span class="hint">HINT #3:</span> Best resolution - 1920*1080, i'm lazy</li>
+				</ul>
+				</p>
+			</section>
 			<section data-background="#FFFFFF">
 				<img class="fragment" data-duration="2" data-animate="fadeIn" src="img/ministry.png">
 			</section>
